Provide better error message when id column not found by GenericMapStore [CTT-935] (#5823)
GitOrigin-RevId: b8f310de27729e3b811f35b93407a2cd92ea8cce