@@ -46,11 +46,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Properties;
 import java.util.concurrent.CountDownLatch;
-import java.util.stream.Collectors;
 
 import static com.hazelcast.internal.util.StringUtil.isBoolean;
-import static com.hazelcast.mapstore.ExistingMappingValidator.validateColumn;
-import static com.hazelcast.mapstore.ExistingMappingValidator.validateColumnsExist;
 import static com.hazelcast.mapstore.FromSqlRowConverter.toGenericRecord;
 import static java.util.concurrent.TimeUnit.MILLISECONDS;
 import static java.util.concurrent.TimeUnit.SECONDS;
@@ -246,12 +243,13 @@ public class GenericMapLoader<K, V> implements MapLoader<K, V>, MapLoaderLifecyc
     private List<SqlColumnMetadata> resolveMappingColumns() {
         // Create a temporary mapping
         String tempMapping = "temp_mapping_" + UuidUtil.newUnsecureUuidString();
+        final String idColumn = genericMapStoreProperties.idColumn;
         mappingHelper.createMapping(
                 tempMapping,
                 genericMapStoreProperties.tableName,
                 null,
                 genericMapStoreProperties.dataConnectionRef,
-                genericMapStoreProperties.idColumn
+                idColumn
         );
 
         List<SqlColumnMetadata> allColumnsMetadataList = mappingHelper.loadColumnMetadataFromMapping(tempMapping);
@@ -261,9 +259,10 @@ public class GenericMapLoader<K, V> implements MapLoader<K, V>, MapLoaderLifecyc
                 .stream()
                 .collect(toMap(SqlColumnMetadata::getName, identity()));
 
+        genericMapStoreProperties.validateColumns(columnMap);
         return genericMapStoreProperties.getAllColumns().stream()
-                                        .map(columnName -> validateColumn(columnMap, columnName))
-                                        .collect(Collectors.toList());
+                                        .map(columnMap::get)
+                                        .toList();
     }
 
     private void readExistingMapping() {
@@ -278,7 +277,7 @@ public class GenericMapLoader<K, V> implements MapLoader<K, V>, MapLoaderLifecyc
             Map<String, SqlColumnMetadata> columnMap = columnMetadata
                     .stream()
                     .collect(toMap(SqlColumnMetadata::getName, identity()));
-            validateColumnsExist(columnMap, genericMapStoreProperties.getAllColumns());
+            genericMapStoreProperties.validateColumns(columnMap);
 
             columnMetadataList = columnMetadata;
             queries = new Queries(mappingName, genericMapStoreProperties.idColumn, columnMetadata);
